@@ -2,6 +2,11 @@
 = rufus-jig CHANGELOG.txt
 
 
+== rufus-jig - 0.1.7    not yet released
+
+- :accept => :json as a shorcut for :accept -> 'application/json'
+
+
 == rufus-jig - 0.1.6    released 2009/12/21
 
 - implemented close for Http and Couch classes
